# EmbedComp

./: README.md  pyproject.toml
.github/workflows/: ipynb-to-html.yml
notebook/: embedding_benchmark.html  embedding_benchmark.ipynb
